completed profile.php styling

--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,6 @@ body, html {
 }
 
 body {
-    background-color: lightgoldenrodyellow;
+    background-color: wheat;
     font-family: Inter, Arial, Helvetica, sans-serif;
 }
