completed styling login.php

--- a/css/header.css
+++ b/css/header.css
@@ -90,7 +90,7 @@
     }
 
     .main-title {
-        background-color: lightgoldenrodyellow;
+        background-color: wheat;
         font-size: 2rem;
         text-align: center;
     }
