--- a/css/profile.css
+++ b/css/profile.css
@@ -11,14 +11,15 @@
 .user-info {
     background-color: white;
     padding: 2rem;
-    margin: 0 auto;
-    width: 50%;
+    margin-left: 2rem;
+    width: 25%;
+    min-width: 650px;
     border-radius: 10px;
 }
 
 .user-info .key {
     display: inline-block;
-    width: 500px;
+    width: 400px;
     font-weight: bold;
 }
 
@@ -27,18 +28,19 @@
 
 @media (max-width: 1200px) {
     .user-info {
-        width: 90%;
+        margin: 1rem auto;
+        min-width: 90%;
         text-align: center; 
     }
 
     .user-info .key {
-        text-align: center; 
-        max-width: 200px;
+        display: block;
+        width: 100%;
+        text-align: center;
     }
 
     .user-info .value {
        display: block;
     }
-
 
 }
