fixed login.css, signup.css

--- a/css/footer.css
+++ b/css/footer.css
@@ -1,5 +1,5 @@
 footer {
-    margin: 1rem 0 0 2rem;
+    margin-left: 2rem;
 }
 
 
@@ -7,6 +7,7 @@ footer {
 
 @media (max-width: 1200px) {
     footer {
-        margin: 0 0 1rem 2rem;
+        margin: 0;
+        text-align: center;
     }
 }
