--- a/css/login.css
+++ b/css/login.css
@@ -14,8 +14,8 @@
 .login-form {
     background-color: white;
     padding: 2rem;
-    margin: 4.75rem 0 0 2rem;
-    width: 25%;
+    margin: 4.75rem 0 1rem 2rem;
+    display: inline-block;
     min-width: 450px;
     border-radius: 10px;
 }
@@ -64,7 +64,6 @@
     width: 25%;
     min-width: 450px;
     margin-left: 2rem;
-    padding-top: 0.8rem;
     font-size: 1.1rem;
 }
 
@@ -73,8 +72,11 @@
 
 @media (max-width: 1200px) {
     .login-form {
-        min-width: 90%;
-        margin: 2rem auto 0 auto;
+        display: block;
+        min-width: 200px;
+        width: 90%;
+        margin: 4.75rem auto 1rem auto;
+        
     }
 
     .form-control, .btn {
@@ -82,6 +84,13 @@
     }
 
     .main-header {
+        text-align: center;
+    }
+
+    .error {
+        margin: 0 0 1rem 0;
+        min-width: 200px;
+        width: 100%;
         text-align: center;
     }
 }
