styled cpanel.php

--- a/css/cpanel.css
+++ b/css/cpanel.css
@@ -2,7 +2,7 @@
     margin: 1rem 0 0 2rem;
 }
 
-.post-form {
+.cpanel-form {
     background-color: white;
     padding: 2rem;
     margin: 4.75rem 0 1rem 2rem;
@@ -16,27 +16,24 @@
     margin-bottom: 2rem;
 }
 
+.btn-primary,
 .btn-success,
-.select-thread {
+.btn-danger {
     display: block;
     width: 100%;
     margin-bottom: 5px;
 }
 
-.select-thread {
+.form-control {
     border: 1px solid darkgray;
 }
 
-.select-thread, 
+.form-control, 
 .btn {
     max-width: 500px;
 }
 
-.select-label {
-    display: block;
-    margin-bottom: 5px;
-}
-
+.error,
 .success {
     font-weight: bolder;
     width: 25%;
@@ -51,23 +48,22 @@ textarea {
 
 
 @media (max-width: 1200px) {
-    .post-form {
+    .cpanel-form {
         display: block;
         min-width: 200px;
         width: 90%;
         margin: 2.75rem auto 1rem auto;
     }
 
-    .select-thread,
-    .btn {
+    .form-control, .btn {
         max-width: 100%;
     }
 
+    .error,
     .success {
         margin: 0 0 1rem 0;
         min-width: 200px;
         width: 100%;
         text-align: center;
     }
-
 }
