--- a/css/edit-thread.css
+++ b/css/edit-thread.css
@@ -45,12 +45,13 @@
 }
 
 
-@media (max-width: 1200px) {
+@media (max-width: 600px) {
     .thread-form {
         display: block;
         min-width: 200px;
-        width: 90%;
+        width: 100%;
         margin: 2.75rem auto 1rem auto;
+        border-radius: 0;
     }
 
     .form-control, .btn {
