--- a/css/login.css
+++ b/css/login.css
@@ -70,12 +70,13 @@
 
 /* responsive */
 
-@media (max-width: 1200px) {
+@media (max-width: 600px) {
     .login-form {
         display: block;
         min-width: 200px;
-        width: 90%;
+        width: 100%;
         margin: 2.75rem auto 1rem auto;
+        border-radius: 0;
         
     }
 
