--- a/css/new-post.css
+++ b/css/new-post.css
@@ -44,12 +44,13 @@ textarea {
 }
 
 
-@media (max-width: 1200px) {
+@media (max-width: 600px) {
     .post-form {
         display: block;
         min-width: 200px;
-        width: 90%;
+        width: 100%;
         margin: 2.75rem auto 1rem auto;
+        border-radius: 0;
     }
 
     .form-control, .btn {
