--- a/css/profile.css
+++ b/css/profile.css
@@ -26,11 +26,12 @@
 
 /* responsive */
 
-@media (max-width: 600px) {
+@media (max-width: 800px) {
     .user-info {
         margin: 1rem auto;
-        min-width: 90%;
-        text-align: center; 
+        min-width: 100%;
+        text-align: center;
+        border-radius: 0; 
     }
 
     .user-info .key {
