--- a/css/threads.css
+++ b/css/threads.css
@@ -50,6 +50,7 @@
 }
 
 .post-row {
+    font-size: 1rem;
     display: flex;
     background-color: white;
     border-radius: 10px;
@@ -64,7 +65,7 @@
 
 .post-body {
     flex-grow: 10;
-    padding: 2rem 0 0.5rem 1.5rem !important;
+    padding: 2rem 1.5rem 0.5rem 1.5rem !important;
 }
 
 .bi {
@@ -79,8 +80,42 @@
     margin-right: 5px;
 }
 
-.thread-link {
+.post-link {
     margin-top: 4rem;
+}
+
+.pagination {
+    font-size: 1.1rem;
+    margin: 2rem 0.5rem 0 0;
+    display: inline-block;
+}
+
+.page-number {
+    display: inline-block;
+    padding: 8px;
+    background-color: white;
+    color: black;
+    text-decoration: none;
+}
+
+.written-by {
+    margin: 0.5rem 0;
+}
+
+.written-by a {
+    text-decoration: none;
+}
+
+.user-red {
+    color: crimson;
+}
+
+.user-green {
+    color: green;
+}
+
+.user-black {
+    color: black;
 }
 
 
