--- a/css/threads.css
+++ b/css/threads.css
@@ -60,12 +60,21 @@
 
 .post-header {
     flex-grow: 0.25;
-    border-right: 1px solid lightgray;
 }
 
 .post-body {
     flex-grow: 10;
     padding: 2rem 1.5rem 0.5rem 1.5rem !important;
+}
+
+.quote {
+    background-color: #eee;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.quote blockquote {
+    margin-top: 8px;
 }
 
 .bi {
@@ -85,17 +94,23 @@
 }
 
 .pagination {
-    font-size: 1.1rem;
-    margin: 2rem 0.5rem 0 0;
+    margin: 1rem 0.5rem 0.5rem 0;
     display: inline-block;
+}
+
+.page-container {
+    display: flex;
+    justify-content: flex-start;
 }
 
 .page-number {
     display: inline-block;
     padding: 8px;
+    border-radius: 10px;
     background-color: white;
     color: black;
     text-decoration: none;
+    margin-right: 5px;
 }
 
 .written-by {
@@ -118,6 +133,18 @@
     color: black;
 }
 
+.user-red:hover {
+    color: darkred;
+}
+
+.user-green:hover {
+    color: darkgreen;
+}
+
+.user-black:hover {
+    color: darkslategray;
+}
+
 
 /* responsive */
 
@@ -131,11 +158,11 @@
         text-align: center;
     }
 
-    .category-title {
+    .thread-title {
         text-align: center;
     }
 
-    .category-title p {
+    .thread-title p {
         display: block;
     }
 
@@ -143,18 +170,34 @@
         text-align: center;
     }
 
-    .table-row {
+    .post-row {
         flex-direction: column;
     }
 
-    .thread-link {
+    .post-body {
+        padding-top: 1rem !important;
+    }
+
+    .post-link {
         text-align: center;
     }
 
     .title,
-    .table-row {
+    .post-row {
         border-radius: 0;
     }
+
+    .post-header {
+        border-right: 0;
+    }
+
+    .pagination {
+        width: 100%;
+        margin-right: 0;
+        text-align: center;
+    }
+
+    .page-container {
+        justify-content: center;
+    }
 }
-
-
