--- a/css/delete-thread.css
+++ b/css/delete-thread.css
@@ -19,8 +19,8 @@
 
 @media (max-width: 800px) {
     .text-success {
-        min-width: 200px;
-        max-width: 100%;
+        display: block;
         text-align: center;
+        margin: 2rem 0 1rem 0;
     }
 }
