--- a/css/delete-category-confirm.css
+++ b/css/delete-category-confirm.css
@@ -32,6 +32,11 @@
     .message-container {
         display: block;
         text-align: center;
+        min-width: 200px;
         margin: 2rem 0 1rem 0;
+    }
+
+    .message-box {
+        border-radius: 0;
     }
 }
