--- a/css/delete-category.css
+++ b/css/delete-category.css
@@ -22,5 +22,7 @@
         display: block;
         text-align: center;
         margin: 2rem 0 1rem 0;
+        min-width: 200px;
+        border-radius: 0;
     }
 }
