--- a/css/delete-post.css
+++ b/css/delete-post.css
@@ -19,8 +19,10 @@
 
 @media (max-width: 800px) {
     .text-success {
-        min-width: 200px;
-        max-width: 100%;
+        display: block;
         text-align: center;
+        margin: 2rem 0 1rem 0;
+        min-width: 200px;
+        border-radius: 0;
     }
 }
